<resources>
    <string name="app_name">Virufy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record_btn_txt">Record</string>
    <string name="pause_btn_txt">Pause</string>
    <string name="playback_btn_txt">Playback</string>
    <string name="submit_btn_txt">Submit</string>
    <string name="retake_btn_txt">Retake</string>
    <string name="stop_btn_txt">Stop</string>
    <string name="calibrate_tv_txt">Calibrate</string>
    <string name="record_cough_tv_txt">Record Cough</string>
    <string name="questions_tv_txt">Questions</string>
    <string name="record_you_coughing_for_10_seconds">We are now going to record you coughing for 10 seconds.</string>
    <string name="when_you_are_done_click_stop">When you are done, click stop!</string>
    <string name="start_btn_txt">Start</string>
    <string name="i_agree_btn_txt">I agree</string>
    <string name="almost_there">Almost there!</string>
    <string name="let_s_answer_a_few_questions">Let’s answer a few questions...</string>
    <string name="next_btn_txt">Next</string>
    <string name="thank_you_for_submitting">Thank you for submitting</string>
    <string name="our_application">our application.</string>
    <string name="finish_btn_txt">Finish</string>

    <string-array name="fragment_names">
        <item>Calibrate</item>
        <item>Record Coughr</item>
        <item>Questions</item>
    </string-array>
</resources>
