<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/record_you_coughing_for_10_seconds" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="16dp">

    </ImageView>


    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="#000"
    android:textSize="16sp"
    android:layout_marginTop="24dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:text="@string/when_you_are_done_click_stop" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="16dp">

    </ImageView>

    <Button
        android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_background"
        android:padding="8dp"
        android:text="@string/start_btn_txt"
        android:textColor="#FFF" />
</LinearLayout>