<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/micIv"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="220dp"
        android:src="@drawable/ic_mic_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/recordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_background"
        android:text="@string/record_btn_txt"
        android:textColor=" #FFFFFF"
        android:visibility="gone"
        android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
        android:gravity="left|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/chronometer" />

    <Button
        android:id="@+id/playbackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_background"
        android:drawableLeft="@drawable/ic_replay_black_24dp"
        android:gravity="left|center_vertical"
        android:padding="8dp"
        android:text="@string/playback_btn_txt"
        android:textColor=" #FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer" />

    <Button
        android:id="@+id/pauseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_background"
        android:drawableLeft="@drawable/ic_pause_black_24dp"
        android:gravity="left|center_vertical"
        android:padding="8dp"
        android:visibility="gone"
        android:text="@string/pause_btn_txt"
        android:textColor=" #FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer" />

    <Button
        android:id="@+id/stopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="228dp"
        android:layout_marginLeft="228dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/stop_btn_background"
        android:drawableLeft="@drawable/ic_stop_black_24dp"
        android:gravity="left|center_vertical"
        android:padding="8dp"
        android:visibility="gone"
        android:text="@string/stop_btn_txt"
        android:textColor=" #FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:background="@drawable/submit_btn_background"
        android:enabled="false"
        android:text="@string/submit_btn_txt"
        android:textColor="#FFF"
        android:padding="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/retakeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:background="@drawable/button_background"
        android:padding="8dp"
        android:text="@string/retake_btn_txt"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer" />


</androidx.constraintlayout.widget.ConstraintLayout>