<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="76dp"
        android:id="@+id/stages_view"
        android:layout_marginRight="36dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:id="@+id/firstStageIv"
            android:src="@drawable/ic_dot" />

        <View
            android:id="@+id/first_divider_view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#E8E8E8" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:id="@+id/secondStageIv"
            android:src="@drawable/ic_dot" />

        <View
            android:id="@+id/second_divider_view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"

            android:background="#E8E8E8" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:id="@+id/thirdStageIv"
            android:src="@drawable/ic_dot" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_below="@id/stages_view"
        android:layout_marginLeft="12dp"
        android:id="@+id/calibrateTv"
        android:text="@string/calibrate_tv_txt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stages_view"
        android:id="@+id/coughTv"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="88dp"
        android:layout_toRightOf="@id/calibrateTv"
        android:text="@string/record_cough_tv_txt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stages_view"
        android:id="@+id/questionsTv"
        android:layout_marginRight="12dp"
        android:layout_marginTop="14dp"
        android:layout_alignParentRight="true"
        android:text="@string/questions_tv_txt" />

    <FrameLayout
        android:layout_marginTop="40dp"
        android:layout_below="@id/stages_view"
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</RelativeLayout>